--- a/PhenoPad/CustomControl/NotePhraseControl.xaml
+++ b/PhenoPad/CustomControl/NotePhraseControl.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Background="Transparent" Height="{x:Bind LINE_HEIGHT}">
-        <StackPanel x:Name="RecognizedPhrase" x:FieldModifier="public" Spacing="15" VerticalAlignment="Center" Orientation="Horizontal"/>
+    <Grid>
+        <Canvas x:Name="PhraseCanvas" Height="{x:Bind LINE_HEIGHT}" />
     </Grid>
 </UserControl>
