phenotype annotation updates

--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -41,7 +41,7 @@
                 
                 <StackPanel>
 
-                    <RelativePanel  MinWidth="60" Padding="3" HorizontalAlignment="Right">
+                    <RelativePanel  MinWidth="60" Padding="3" HorizontalAlignment="Stretch">
 
                             <Button Foreground="PaleVioletRed" Style="{StaticResource ButtonStyle1}"
                                     ToolTipService.ToolTip="Delete strokes"
